# Kimi-Coder-Mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  CONTRIBUTING.md  FUTURE_IDEAS.md  LICENSE  PROJECT_SPEC.md  QUICK_REFERENCE.md  README-Kimi.md  README.md  TEMPLATE_USAGE.md  TEST_PROMPTS.md  TODOS.md  WHY.md  kimi-mcp-server-prompt.md  kimi_cli_research.md  pyproject.toml  secrets_template.json  setup.sh
.github/workflows/: setup-template.yml  test.yml
ClaudeUsage/: README.md  house_agents.md  project_setup.md
docs/: FILE_SUMMARY.md  WHY.md
src/kimi_mcp/: __init__.py  __main__.py  file_tracker.py  server.py  session.py  utils.py
tests/: __init__.py  test_file_tracker.py  test_session.py  test_tools.py  test_utils.py
tests/fixtures/: __init__.py
